--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,11 +2,17 @@
 # ===  General settings  ===
 # ==========================
 
+# Need for neovim
 set -g default-terminal "screen-256color"
+set-option -a terminal-features ',alacritty:RGB'
+set-option -sg escape-time 10
+set-option -g focus-events on
+
+
 
 # Change prefix from C-b to C-a
 unbind C-b
-set -g prefix C-a
+set -g prefix C-s
 
 # Set parent terminal title to reflect current window in tmux
 set -g set-titles on
@@ -32,4 +38,12 @@ set-hook -g after-new-window 'command-prompt -I "#{window_name}" "rename-window 
 # Split pane
 bind | split-window -h -c '#{pane_current_path}'
 bind - split-window -v -c '#{pane_current_path}'
+
+# Enable VI keybinding on tmux
+setw -g mode-keys vi
+
+bind v copy-mode
+bind p paste-buffer
+bind C-b choose-buffer
+
 
