--- a/.tmux.conf
+++ b/.tmux.conf
@@ -8,8 +8,6 @@ set-option -a terminal-features ',alacritty:RGB'
 set-option -sg escape-time 10
 set-option -g focus-events on
 
-
-
 # Change prefix from C-b to C-a
 unbind C-b
 set -g prefix C-s
@@ -36,14 +34,41 @@ bind r  command-prompt -I "#{session_name}" "rename-session '%%'"
 set-hook -g after-new-window 'command-prompt -I "#{window_name}" "rename-window '%%'"' 
 
 # Split pane
+unbind '"'
+unbind %
 bind | split-window -h -c '#{pane_current_path}'
 bind - split-window -v -c '#{pane_current_path}'
 
 # Enable VI keybinding on tmux
 setw -g mode-keys vi
+unbind Left
+unbind Down
+unbind Up
+unbind Right
+
+
+# Switch panes using alt and vim commands
+bind -n C-h select-pane -L
+bind -n C-j select-pane -D
+bind -n C-k select-pane -U
+bind -n C-l select-pane -R
+
+# Resize panes using alt and vim commands
+bind -n M-h resize-pane -L 1
+bind -n M-j resize-pane -D 1
+bind -n M-k resize-pane -U 1
+bind -n M-l resize-pane -R 1
 
 bind v copy-mode
+
+unbind p
+unbind n
 bind p paste-buffer
 bind C-b choose-buffer
 
+# Change window
+bind -n M-. next
+bind -n M-, prev
 
+# Kill session
+bind Q kill-session
