update tmux config, add .bashrc config

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -8,6 +8,9 @@ set-option -a terminal-features ',alacritty:RGB'
 set-option -sg escape-time 10
 set-option -g focus-events on
 
+# UI
+set -g status-left-length 20
+
 # Change prefix from C-b to C-a
 unbind C-b
 set -g prefix C-s
@@ -59,6 +62,12 @@ bind -n M-j resize-pane -D 1
 bind -n M-k resize-pane -U 1
 bind -n M-l resize-pane -R 1
 
+
+# Keys for ending sessions and windows etc.
+bind -n C-w kill-window
+bind -n C-q kill-server
+bind -n C-e kill-pane
+
 bind v copy-mode
 
 unbind p
@@ -70,5 +79,5 @@ bind C-b choose-buffer
 bind -n M-. next
 bind -n M-, prev
 
-# Kill session
-bind Q kill-session
+# don't rename windows automatically
+set-option -g allow-rename off
